add testing changes